2003-02-15  Ulrich Drepper  <drepper@redhat.com>

	* pthread_setconcurrency.c (pthread_setconcurrency): Fail for
	negative arguments.
	* Makefile (tests): Add tst-basic5.
	* tst-basic5.c: New file.

2003-02-14  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-basic4.
	* tst-basic4.c: New file.

	* pthreadP.h: Add declaraction for __nptl_nthreads.
	* pthread_create.c: Define __nptl_nthreads
	(start_thread): Increment __nptl_nthreads at beginning.  Decrement
	after thread is done.  If then zero, call exit(0).
	* sysdeps/pthread/pthread-functions.h (struct pthread_functions):
	Add ptr_nthreads.  Define HAVE_PTR_NTHREADS.
	* init.c (pthread_functions): Initialize ptr_nthreads.
	* allocatestack.c (nptl_nthreads): Remove definition and all uses.
	(__reclaim_stacks): Decrement __nptl_nthreads.
	* sysdeps/pthread/Makefile [$(subdir)==csu] (CFLAGS-libc-start.c):
	Define.
	* Makefile (tests): Add tst-basic3.
	* tst-basic3.c: New file.

	* descr.h: Define CANCELING_BIT and CANCELING_BITMASK.  Introduce
	after CANCELTYPE_BIT, move the other bits up.  Update CANCEL_RESTMASK.
	* init.c (sigcancel_handler): Also set CANCELING_BITMASK bit in newval.
	* pthread_cancel.c (pthread_cancel): Likewise.  Also set CANCELING_BIT
	if asynchronous canceling is enabled.
	* pthread_join.c (pthread_join): When recognizing circular joins,
	take into account the other thread might be already canceled.
	* Makefile (tests): Add tst-join5.
	* tst-join5.c: New file.

	* Makefile (tests): Add tst-join4.
	* tst-join4.c: New file.

2003-02-13  Ulrich Drepper  <drepper@redhat.com>

	* tst-cond4.c (main): Add test of pthread_attr_getpshared.

2003-02-13  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/s390/tls.h (THREAD_GETMEM, THREAD_GETMEM_NC, THREAD_SETMEM,
	THREAD_SETMEM_NC): Use passed descr instead of THREAD_SELF.
	* sysdeps/unix/sysv/linux/s390/jmp-unwind.c (_longjmp_unwind): Avoid
	warning.
	* sysdeps/unix/sysv/linux/s390/lowlevellock.c: Include <sys/time.h>